add unit testing infrastructure and test cases manage versions by spring-boot-starter-parent downgrade jdk to 17